--- a/index.html
+++ b/index.html
@@ -17,18 +17,15 @@
         * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Cairo', sans-serif; }
         body { background: var(--white); color: var(--brown); overflow-x: hidden; scroll-behavior: smooth; }
 
-        /* البنر العلوي */
         .top-banner { background: var(--brown); color: white; padding: 8px 5%; text-align: center; font-size: 13px; display: flex; justify-content: space-between; align-items: center; }
         .phone-fix { direction: ltr; font-weight: bold; }
 
-        /* الهيدر المطور */
         header { background: var(--white); padding: 12px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
         .brand-text { font-size: 1.9rem; font-weight: 900; color: var(--brown); line-height: 1; text-align: right; flex: 1; }
         .logo-center { flex: 1; display: flex; justify-content: center; }
         .logo-img { height: 95px; cursor: pointer; transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
         .logo-img:hover { transform: scale(1.1) rotate(2deg); }
 
-        /* تفاعلية السلة والواتساب */
         .header-left-actions { flex: 1; display: flex; justify-content: flex-end; align-items: center; gap: 20px; }
         .whatsapp-link { text-decoration: none; color: #25D366; font-weight: 700; display: flex; align-items: center; gap: 8px; font-size: 0.95rem; transition: 0.3s; }
         .whatsapp-link:hover { transform: translateY(-3px); opacity: 0.8; }
@@ -47,15 +44,10 @@
         .page { display: none; }
         .active { display: block; }
 
-        /* الهيرو المطور */
-        .hero { 
-            height: 85vh; background: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.15)), url('https://i.ibb.co/0R1MK2d7/Gemini-Generated-Image-tnocdatnocdatnoc.png'); 
-            background-size: cover; background-position: center; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; color: var(--white); padding: 20px;
-        }
+        .hero { height: 85vh; background: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.15)), url('https://i.ibb.co/0R1MK2d7/Gemini-Generated-Image-tnocdatnocdatnoc.png'); background-size: cover; background-position: center; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; color: var(--white); padding: 20px; }
         .hero h1 { font-size: clamp(35px, 7vw, 60px); font-weight: 900; margin-bottom: 15px; }
         .hero h1 span { color: var(--gold); }
 
-        /* تفاعلية أزرار الهيرو */
         .hero-btns { display: flex; gap: 20px; margin-top: 35px; flex-wrap: wrap; justify-content: center; }
         .btn-gold { background: var(--gold); color: white; border: none; padding: 16px 38px; border-radius: 8px; font-weight: bold; cursor: pointer; transition: 0.3s; box-shadow: 0 4px 15px rgba(217, 179, 130, 0.4); }
         .btn-gold:hover { transform: translateY(-5px); background: #c5a172; box-shadow: 0 8px 25px rgba(217, 179, 130, 0.6); }
@@ -63,12 +55,10 @@
         .btn-outline { background: rgba(0,0,0,0.3); border: 2px solid white; color: white; padding: 16px 38px; border-radius: 8px; font-weight: bold; cursor: pointer; transition: 0.3s; backdrop-filter: blur(5px); }
         .btn-outline:hover { background: white; color: var(--brown); transform: translateY(-5px); }
 
-        /* تفاعلية أيقونات التواصل */
         .social-hero { display: flex; gap: 22px; margin-top: 25px; }
         .social-hero a { color: var(--white); font-size: 1.9rem; transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); display: inline-block; }
         .social-hero a:hover { color: var(--gold); transform: translateY(-8px) scale(1.2); }
 
-        /* أقسامنا */
         .catalog-grid { display: flex; flex-wrap: nowrap; overflow-x: auto; gap: 20px; padding: 40px 5%; max-width: 1300px; margin: auto; scrollbar-width: none; }
         .cat-card { flex: 0 0 calc(25% - 15px); position: relative; border-radius: 20px; overflow: hidden; height: 380px; cursor: pointer; box-shadow: 0 10px 30px rgba(0,0,0,0.1); transition: 0.5s; }
         .cat-card img { width: 100%; height: 100%; object-fit: cover; transition: 0.6s ease; }
@@ -76,7 +66,6 @@
         .cat-label { position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); background: var(--gold); color: white; padding: 10px 25px; border-radius: 10px; font-weight: 900; z-index: 5; transition: 0.3s; }
         .cat-card:hover .cat-label { background: var(--brown); padding: 12px 30px; }
 
-        /* لماذا شبابيك */
         .features-section { background: var(--bg); padding: 80px 5%; text-align: center; }
         .features-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px; max-width: 1200px; margin: auto; }
         .f-card { background: var(--white); padding: 45px 25px; border-radius: 20px; box-shadow: 0 4px 25px rgba(0,0,0,0.05); transition: 0.3s; }
@@ -84,7 +73,6 @@
         .f-icon { width: 85px; height: 85px; background: var(--gold); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 30px; color: white; font-size: 2.2rem; transition: 0.5s; }
         .f-card:hover .f-icon { transform: rotateY(360deg); background: var(--brown); }
 
-        /* من نحن */
         .about-container { max-width: 1100px; margin: auto; padding: 80px 5%; text-align: center; }
         .about-text-content { max-width: 900px; margin: 0 auto 50px; line-height: 2.2; font-size: 1.2rem; color: #444; text-align: justify; }
         .stats-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 35px; margin-top: 55px; }
@@ -93,7 +81,6 @@
         .stat-number { font-size: 2.6rem; font-weight: 900; color: var(--gold); }
         .stat-card:hover .stat-number { color: white; }
 
-        /* الفوتر القهوائي */
         footer { background: var(--brown); color: white; padding: 70px 5% 35px; text-align: center; }
         .footer-grid { display: grid; grid-template-columns: 2.5fr 1fr 1fr 1.5fr; gap: 45px; text-align: right; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 55px; margin-top: 55px; }
         .footer-logo { font-weight: 900; font-size: 1.7rem; color: var(--gold); }
@@ -187,8 +174,6 @@
                 <h2 style="font-size: 2.6rem; font-weight: 800; margin: 45px 0;">شبابيك للستائر</h2>
                 <div class="about-text-content">
                     <p>تأسست شبابيك للستائر بهدف تقديم أفخم وأجود أنواع الستائر المنزلية في العراق. نؤمن بأن الستائر ليست مجرد قطعة قماش، بل هي عنصر أساسي في تصميم المنزل يعكس ذوق أصحابه ويضيف لمسة من الأناقة والفخامة.</p>
-                    <p style="margin-top: 20px;">نقدم مجموعة واسعة من الستائر تشمل البلاك أوت والشفافة والديكورية وستائر الرول، بأقمشة مستوردة من أفضل المصانع العالمية. كما نوفر خدمة التفصيل حسب المقاسات وخدمة التركيب المنزلي بأيدي فنيين متخصصين.</p>
-                    <p style="margin-top: 20px;">رؤيتنا هي أن نكون الوجهة الأولى للستائر الفاخرة في العراق، ونسعى دائماً لتحقيق رضا عملائنا من خلال الجودة العالية والأسعار المنافسة والخدمة المتميزة.</p>
                 </div>
                 <div class="stats-grid">
                     <div class="stat-card"><div class="stat-number">+500</div><p>عميل سعيد</p></div>
@@ -213,7 +198,7 @@
                 <select id="aCat"><option>بلاك أوت</option><option>شفافة</option><option>ديكور</option><option>رول</option></select>
                 <input type="text" id="aName" placeholder="اسم المنتج">
                 <input type="number" id="aPrice" placeholder="السعر لكل م²">
-                <input type="text" id="aImg" placeholder="رابط الصورة">
+                <input type="text" id="aImg" placeholder="رابط الصورة المباشر">
                 <button class="btn-gold" style="width:100%" onclick="saveProd()">حفظ ونشر المنتج</button>
                 <div id="adminList" style="margin-top:20px;"></div>
             </div>
@@ -255,12 +240,16 @@
     </footer>
 
     <script>
-        // إعدادات Firebase
+        // إعدادات Firebase من صورتك
         const firebaseConfig = {
             apiKey: "AIzaSyD1TENeV6RkWmrYIjV6seGx84VavsM_tvE",
             authDomain: "shababekcurtain.firebaseapp.com",
             databaseURL: "https://shababekcurtain-default-rtdb.asia-southeast1.firebasedatabase.app/",
-            projectId: "shababekcurtain"
+            projectId: "shababekcurtain",
+            storageBucket: "shababekcurtain.firebasestorage.app",
+            messagingSenderId: "413811779922",
+            appId: "1:413811779922:web:ace21e11450748eb5fb28b",
+            measurementId: "G-5G31FT6DJH"
         };
         firebase.initializeApp(firebaseConfig);
         const dbRef = firebase.database().ref('products');
@@ -303,20 +292,16 @@
         function doCalc() { const w = document.getElementById('wIn').value/100; const h = document.getElementById('hIn').value/100; if(w && h) document.getElementById('resPrice').innerText = Math.round(w*h*cur.price).toLocaleString(); }
         
         function addToCart() { 
-            const w = document.getElementById('wIn').value; const h = document.getElementById('hIn').value;
             const total = document.getElementById('resPrice').innerText;
-            const inst = document.getElementById('instIn').checked ? "نعم" : "لا";
-            if(!w || !h || total === "0") return alert("يرجى إدخال المقاسات");
-            cart.push({ n: cur.name, s: `${w}x${h}`, p: total, i: inst }); 
+            if(total === "0") return alert("يرجى إدخال المقاسات");
+            cart.push({ n: cur.name, p: total }); 
             document.getElementById('globalCartCount').innerText = cart.length; alert("تمت إضافة المنتج للسلة"); 
         }
 
         function openCart() { 
             if(cart.length === 0) return alert("سلة التسوق فارغة");
             let message = "طلب جديد من سلة شبابيك للستائر:\n\n"; 
-            cart.forEach((item, index) => {
-                message += `${index + 1}- المنتج: ${item.n}\n   المقاس: ${item.s} سم\n   السعر: ${item.p} د.ع\n   طلب تركيب: ${item.i}\n\n`;
-            });
+            cart.forEach((item, index) => { message += `${index + 1}- المنتج: ${item.n}\n   السعر: ${item.p} د.ع\n\n`; });
             window.location.href = `https://wa.me/9647883002797?text=${encodeURIComponent(message)}`; 
         }
 
@@ -329,7 +314,7 @@
                 img: document.getElementById('aImg').value
             };
             dbRef.push(newProd).then(() => {
-                alert("تم الحفظ في السحاب بنجاح!");
+                alert("تم الحفظ والنشر بنجاح!");
                 showAdminList();
             });
         }
@@ -341,13 +326,13 @@
                 document.getElementById('adminList').innerHTML = items.map(([key, i]) => `
                     <div style="display:flex; justify-content:space-between; padding:8px; border-bottom:1px solid #ddd;">
                         <span>${i.name}</span>
-                        <button onclick="delProd('${key}')" style="color:red; border:none; background:none; cursor:pointer;">حذف</button>
+                        <button onclick="delProd('${key}')" style="color:red; border:none; cursor:pointer;">حذف</button>
                     </div>`).join('');
             });
         }
 
         function delProd(key) {
-            if(confirm("حذف نهائي؟")) dbRef.child(key).remove().then(() => showAdminList());
+            if(confirm("حذف المنتج؟")) dbRef.child(key).remove().then(() => showAdminList());
         }
     </script>
 </body>
